added OpenEntityManagerInViewFilter, implemented showing localities on a client
git-svn-id: https://svn.webgres.cz/svn/poptavka@184 61682b0c-635e-44ba-a85b-d27e7dc34134